--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,7 +4,7 @@ COPY package*.json ./
 RUN npm install --legacy-peer-deps
 COPY . .
 RUN npm run build
-
+# comment
 # Serve static files with nginx
 FROM nginx:alpine
 COPY --from=build /app/build /usr/share/nginx/html
