--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,5 +1,5 @@
 # Frontend Environment Variables for Production
-REACT_APP_API_URL=https://kaiken-hw-production.up.railway.app
+REACT_APP_API_URL=kaiken-hw.railway.internal
 
 # Replace with your actual backend URL after deployment
 # Railway: https://your-service.railway.app
